# pg_planner

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build.yml
cmake/: FindPostgreSQL.cmake
docs/: planner.md  subquery.md
include/common/: config.h  defer.h  exception.h  formator.h  hash_util.h  macros.h  pg_guard.h  scope_timer.h
include/main/: from_pg_query.h  main.h
include/pg_catalog/: catalog.h  relation_info.h
include/pg_operator/: filter_push_down.h  item_expr.h  logical_operator.h  normalizer.h  operator.h  operator_node.h  operator_utils.h  physical_operator.h
include/pg_optimizer/: binding.h  child_property_deriver.h  colref.h  colref_pool.h  cost_model.h  functional_dependency.h  group.h  group_expression.h  implementation_rules.h  memo.h  operator_prop.h  optimization_context.h  optimizer.h  optimizer_context.h  optimizer_task.h  order_spec.h  pattern.h  plan_generator.h  properties.h  property.h  property_deriver.h  property_enforcer.h  rule.h  transformation_rules.h
src/: pg_planner--1.0.sql  pg_planner.cpp
src/common/: hash_utils.cpp
src/main/: from_pg_query.cpp  main.cpp
src/pg_catalog/: catalog.cpp  relation_info.cpp
src/pg_operator/: filter_push_down.cpp  item_expr.cpp  logical_operator.cpp  normalizer.cpp  operator.cpp  operator_node.cpp  operator_utils.cpp  physical_operator.cpp
src/pg_optimizer/: binding.cpp  child_property_deriver.cpp  colref_pool.cpp  cost_model.cpp  group.cpp  group_expression.cpp  implementation_rules.cpp  memo.cpp  operator_prop.cpp  optimizer.cpp  optimizer_context.cpp  optimizer_task.cpp  order_spec.cpp  plan_generator.cpp  properties.cpp  property.cpp  property_deriver.cpp  property_enforcer.cpp  rule.cpp  transformation_rules.cpp
test/: CMakeLists.txt  README.md  test_codecov_integration.sh  test_grcov_coverage.sh
test/regress/: regression.conf  schedule
test/regress/expected/: index.out  q1.out  q10.out  q11.out  q12.out  q13.out  q14.out  q15.out  q16.out  q17.out  q18.out  q19.out  q2.out  q20.out  q21.out  q22.out  q3.out  q4.out  q5.out  q6.out  q7.out  q8.out  q9.out  test_setup.out  test_setup_1.out
test/regress/sql/: index.sql  q1.sql  q10.sql  q11.sql  q12.sql  q13.sql  q14.sql  q15.sql  q16.sql  q17.sql  q18.sql  q19.sql  q2.sql  q20.sql  q21.sql  q22.sql  q3.sql  q4.sql  q5.sql  q6.sql  q7.sql  q8.sql  q9.sql  test_setup.sql
test/test/: common_test.cpp  transform_test.cpp
test/test_utils/: pg_test.h
